--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.20)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
@@ -19,7 +19,7 @@ endif()
 option(ENABLE_WERROR            "Enable treating compilation warnings as errors"         OFF)
 option(ENABLE_LIGHTMFS          "Enable light version of LizardFS"                       OFF)
 option(ENABLE_UTILS             "Enable building additional binaries used e.g. in tests" OFF)
-option(ENABLE_TESTS             "Enable building unit and functional tests"              OFF)
+option(ENABLE_TESTS             "Enable building unit and functional tests"              ON)
 option(ENABLE_DOCS              "Enable building the documentation"                      ON)
 option(ENABLE_EXIT_ON_USR1      "Enable handler for SIGUSR1 which calls exit()"          OFF)
 option(THROW_INSTEAD_OF_ABORT   "Throw std::exception instead of calling abort"          OFF)
@@ -29,7 +29,9 @@ option(ENABLE_VERBOSE_ASCIIDOC  "Enable verbose output of asciidoc"             
 option(ENABLE_TCMALLOC          "Enable use of tcmalloc-minimal library"                 OFF)
 option(ENABLE_JEMALLOC          "Enable use of jemalloc library"                         OFF)
 option(ENABLE_POLONAISE         "Enable polonaise"                                       ON)
-option(ENABLE_CLIENT_LIB        "Enable dynamic client library (liblizardfs-client)"     OFF)
+option(ENABLE_CLIENT_LIB        "Enable dynamic client library (liblizardfs-client)"     ON)
+option(ENABLE_OFFICIAL_BUILD    "Make the build official"                                OFF)
+option(SET_RC_BUILD_NUMBER      "Sets optional -rcN build suffix"                        OFF)
 # end of LizardFS options
 option(ENABLE_TRACES            "Enable traces"                                          OFF)
 option(ENABLE_CRC               "Enable checksums"                                       ON)
@@ -88,8 +90,8 @@ set(DEFAULT_MASTER_HOSTNAME      "mfsmaster"                CACHE STRING "Defaul
 set(DEFAULT_MASTER_PORT          "9421"                     CACHE STRING "Default master server port number")
 set(DEFAULT_MOUNTED_SUBFOLDER    "/"                        CACHE STRING "Default subfolder to be mounted")
 set(DEFAULT_MFSMOUNT_CONFIG_PATH "${ETC_PATH}/mfsmount.cfg" CACHE STRING "Default full path to mfsmount configuration file")
-set(LIZARDFS_BLOCKS_IN_CHUNK     "1024"                     CACHE STRING "Number of blocks in one chunk")
-set(LIZARDFS_BLOCK_SIZE          "65536"                    CACHE STRING "Number of bytes in one block")
+set(LIZARDFS_BLOCKS_IN_CHUNK     1024                       CACHE INT "Number of blocks in one chunk")
+set(LIZARDFS_BLOCK_SIZE          65536                      CACHE INT "Number of bytes in one block")
 
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
@@ -110,6 +112,8 @@ message(STATUS "ENABLE_TCMALLOC: ${ENABLE_TCMALLOC}")
 message(STATUS "ENABLE_JEMALLOC: ${ENABLE_JEMALLOC}")
 message(STATUS "ENABLE_POLONAISE: ${ENABLE_POLONAISE}")
 message(STATUS "ENABLE_CLIENT_LIB: ${ENABLE_CLIENT_LIB}")
+message(STATUS "ENABLE_OFFICIAL_BUILD: ${ENABLE_OFFICIAL_BUILD}")
+message(STATUS "SET_RC_BUILD_NUMBER: ${SET_RC_BUILD_NUMBER}")
 message(STATUS "ENABLE_URAFT: ${ENABLE_URAFT}")
 # end of LizardFS options values
 message(STATUS "ENABLE_TRACES: ${ENABLE_TRACES}")
@@ -122,6 +126,15 @@ execute_process(COMMAND "git" "rev-parse" "HEAD"
   OUTPUT_VARIABLE GIT_SHA1 RESULT_VARIABLE GIT_SHA1_RETURN_VALUE
   OUTPUT_STRIP_TRAILING_WHITESPACE)
 
+if(NOT ENABLE_OFFICIAL_BUILD AND GIT_SHA1_RETURN_VALUE EQUAL 0)
+  set(PACKAGE_VERSION_SUFFIX "-devel-${GIT_SHA1}")
+elseif(NOT ENABLE_OFFICIAL_BUILD)
+  set(PACKAGE_VERSION_SUFFIX "-devel")
+elseif(SET_RC_BUILD_NUMBER)
+  set(PACKAGE_VERSION_SUFFIX "-rc${SET_RC_BUILD_NUMBER}")
+else()
+  set(PACKAGE_VERSION_SUFFIX "")
+endif()
 
 if(ENABLE_TESTS)
   if(NOT THROW_INSTEAD_OF_ABORT)
@@ -143,47 +156,12 @@ if(ENABLE_CLIENT_LIB)
   set(ENABLE_PIC_TARGETS ON)
 endif()
 
-if(CMAKE_BUILD_TYPE STREQUAL "coverage" OR CODE_COVERAGE)
-  if("${CMAKE_C_COMPILER_ID}" MATCHES "(Apple)?[Cc]lang" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "(Apple)?[Cc]lang")
-    message("Building with llvm Code Coverage Tools")
-    find_program(LLVM_COV_PATH llvm-cov)
-    if(NOT LLVM_COV_PATH)
-      message(FATAL_ERROR "llvm-cov not found! Aborting.")
-    endif()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-instr-generate -fcoverage-mapping")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-instr-generate -fcoverage-mapping")
-  elseif("${CMAKE_C_COMPILER_ID}" MATCHES "GNU" OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
-    message("Building with lcov Code Coverage Tools")
-    if(NOT (CMAKE_BUILD_TYPE STREQUAL "Debug"))
-      message(WARNING "Code coverage results with an optimized (non-Debug) build may be misleading")
-    endif()
-    find_program(LCOV_PATH NAMES lcov lcov.bat lcov.exe lcov.perl)
-    if(NOT LCOV_PATH)
-      message(FATAL_ERROR "lcov not found! Aborting...")
-    endif()
-    find_program(GENHTML_PATH NAMES genhtml genhtml.perl genhtml.bat)
-    if(NOT GENHTML_PATH)
-      message(FATAL_ERROR "genhtml not found! Aborting...")
-    endif()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -fprofile-arcs -ftest-coverage")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -fprofile-arcs -ftest-coverage")
-  else()
-    message(FATAL_ERROR "Code coverage requires Clang or GCC. Aborting.")
-  endif()
-endif()
-
 project(lizardfs)
-
-set(PACKAGE_VERSION "3.13.0-devel")
-
-string(REGEX MATCH "^([0-9]+)\\.([0-9]+)\\.([0-9]+)" PACKAGE_VERSION_MATCH ${PACKAGE_VERSION})
-set(PACKAGE_VERSION_MAJOR ${CMAKE_MATCH_1})
-set(PACKAGE_VERSION_MINOR ${CMAKE_MATCH_2})
-set(PACKAGE_VERSION_MICRO ${CMAKE_MATCH_3})
-message(STATUS "PACKAGE_VERSION: ${PACKAGE_VERSION}")
-message(STATUS "PACKAGE_VERSION_MAJOR: ${PACKAGE_VERSION_MAJOR}")
-message(STATUS "PACKAGE_VERSION_MINOR: ${PACKAGE_VERSION_MINOR}")
-message(STATUS "PACKAGE_VERSION_MICRO: ${PACKAGE_VERSION_MICRO}")
+set(PACKAGE_VERSION_MAJOR 3)
+set(PACKAGE_VERSION_MINOR 13)
+set(PACKAGE_VERSION_MICRO 0)
+set(PACKAGE_VERSION
+    "${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}.${PACKAGE_VERSION_MICRO}${PACKAGE_VERSION_SUFFIX}")
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug)
@@ -193,11 +171,26 @@ if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64" )
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -m64")
 endif()
+
+# find out which platform we are building on
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  set(LINUX ON)
+  set(UNIX ON)
+endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+
+if (LINUX)
+    set(PLATFORM "LINUX")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-strict-aliasing")
+    find_library(LIBDL dl)  # module loader
+endif(LINUX)
+
 if(MINGW)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wformat=0")
 endif()
 string(REPLACE "-DNDEBUG" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17 -pthread -Wall -Wextra -Werror -Wpedantic -fwrapv")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17 -pthread -Wall -Wextra -Werror -Wpedantic -fwrapv")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -std=c++17 -pthread -Wall -Wextra -Wpedantic -fwrapv")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -g")
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O2 -ftree-vectorize -g -fno-omit-frame-pointer")
@@ -205,7 +198,7 @@ set(CMAKE_CXX_FLAGS_COVERAGE "-O0 -g --coverage")
 set(CMAKE_CXX_FLAGS_CLANG_ANALYZE "--analyze -Xanalyzer -analyzer-output=text")
 set(CMAKE_CXX_FLAGS_CLANG_SANITIZE_THREAD "-g -O0 -fsanitize=thread")
 set(CMAKE_CXX_FLAGS_CXXDEBUG "-O0 -g -D_GLIBCXX_DEBUG")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c17 -Wall")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall")
 
 add_definitions(-D_LARGEFILE_SOURCE)
 add_definitions(-D_FILE_OFFSET_BITS=64)
@@ -337,6 +330,8 @@ if(NOT MINGW)
     add_subdirectory(doc)
   endif()
   if(ENABLE_NFS_GANESHA)
+    # Internal capability required by some FSALs
+    option(GSH_CAN_HOST_LOCAL_FS "Ganesha supports hosting local filesystems" ON)
     add_subdirectory(src/nfs-ganesha)
   endif()
 endif()
