--- a/src/nfs-ganesha/CMakeLists.txt
+++ b/src/nfs-ganesha/CMakeLists.txt
@@ -26,27 +26,4 @@ add_library(fsallizardfs MODULE ${NFS_GANESHA_PLUGIN_MAIN} ${NFS_GANESHA_PLUGIN_
 target_link_libraries(fsallizardfs lizardfs-client_pic)
 
 # LizardFS FSAL (libfsallizardfs.so) will be installed at ${LIZARDFS_ROOT}/lib/ganesha
-# install(TARGETS fsallizardfs COMPONENT fsal DESTINATION ${LIB_SUBDIR}/ganesha)
-
-# Original DESTINATION was ${LIB_SUBDIR}/ganesha
-# In this version, it was changed to install at the Ganesha lib folder
-# Define FSAL Destination to: /usr/lib/ganesha
-SET(CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install prefix for common files" FORCE)
-
-# Library path name
-get_property(USE_LIB64 GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS)
-if (USE_LIB64)
-        set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib64 CACHE PATH
-                "Specify name of libdir inside install path")
-else (USE_LIB64)
-        set(LIB_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/lib CACHE PATH
-                "Specify name of libdir inside install path")
-endif (USE_LIB64)
-
-IF(FSAL_DESTINATION)
-    set(FSAL_DESTINATION ${FSAL_DESTINATION} )
-ELSE()
-    set(FSAL_DESTINATION "${LIB_INSTALL_DIR}/ganesha")
-ENDIF()
-
-install(TARGETS fsallizardfs COMPONENT fsal DESTINATION ${FSAL_DESTINATION} )
+install(TARGETS fsallizardfs COMPONENT fsal DESTINATION ${LIB_SUBDIR}/ganesha)
