fix(ci): Comply to PEP-668
On python dependencies install, there was a 'error: externally-managed-environment'
message.
A virtual environment was set to comply with the PEP-668 specification.
As the python inside the virtual environment could not find the `asciidoc`
module installed by apt, this commit uses pip to set it up.

Merge branch 'fix-pep-0668-error' into dev-short-system-tests

--- a/tests/ci_build/Dockerfile.bookworm-build
+++ b/tests/ci_build/Dockerfile.bookworm-build
@@ -19,6 +19,18 @@ RUN set -e ; \
     useradd -r -u ${USER_ID} -g ${USERNAME} -d /home/${USERNAME} ${USERNAME} ; \
     chown ${USERNAME}:${USERNAME} /home/${USERNAME}
 WORKDIR /home/${USERNAME}
+ENV VIRTUAL_ENV=/opt/venv
+ENV PATH="${VIRTUAL_ENV}/bin:${PATH}"
+RUN set -e ; \
+    apt-get update ; \
+    apt-get install --yes \
+      python3-pip \
+      python3-setuptools \
+      python3-venv \
+      python3-wheel ; \
+    rm -rf /var/lib/apt/lists/* ; \
+    python3 -m venv "${VIRTUAL_ENV}" ; \
+    pip install asciidoc
 RUN set -e ; \
     apt-get update ; \
     apt-get install --yes sudo ; \
