nfs-ganesha: Enable FSAL ACL at compilation time
* Add _ENABLE_ACL_SUPPORT cmake flag to enable/disable ACL support at
  compilation time. It allows enable/disable ACL support without
  modifying the code.

* ACL is enabled by default. To disable it, run cmake assigning
  -D_ENABLE_ACL_SUPPORT=OFF, e.g:
  cmake ../rabbitfs -D_ENABLE_ACL_SUPPORT=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,6 +303,9 @@ endif()
 
 set(CHARTS_CSV_CHARTID_BASE 90000)
 
+# Define cmake _ENABLE_ACL_SUPPORT flag
+set(_ENABLE_ACL_SUPPORT ON CACHE BOOL "Enable nfs-ganesha ACL support") # Configurable by user
+
 # Create config.h file
 configure_file(config.h.in config.h)
 include_directories(${CMAKE_BINARY_DIR}) # Here we have generated config.h
