nfs-ganesha: Update NFS ACL at compilation time * Rename _ENABLE_ACL_SUPPORT cmake variable to ENABLE_NFS_ACL_SUPPORT   as suggested from code review done by guillex.
* NFS ACL support is enabled by default. To disable it, run cmake
  assigning -DENABLE_NFS_ACL_SUPPORT=OFF, e.g:
  cmake ../rabbitfs -DENABLE_NFS_ACL_SUPPORT=OFF

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -303,8 +303,7 @@ endif()
 
 set(CHARTS_CSV_CHARTID_BASE 90000)
 
-# Define cmake _ENABLE_ACL_SUPPORT flag
-set(_ENABLE_ACL_SUPPORT ON CACHE BOOL "Enable nfs-ganesha ACL support") # Configurable by user
+set(ENABLE_NFS_ACL_SUPPORT ON CACHE BOOL "Enable nfs-ganesha ACL support") # Configurable by user
 
 # Create config.h file
 configure_file(config.h.in config.h)
