tests(ci): Add sudo capability to jenkins
Some tests are designed to be ran as root user

Co-authored-by: Guillex <lgsilva3087@gmail.com>
Co-authored-by: Antuan <antuan@rabbitfs.org>

--- a/tests/ci_build/Dockerfile.ubuntu22.04-test
+++ b/tests/ci_build/Dockerfile.ubuntu22.04-test
@@ -16,7 +16,10 @@ RUN set -e ; \
   mkdir -p /home/${USERNAME} ; \
   groupadd -g ${GROUP_ID} ${USERNAME} ; \
   useradd -r -u ${USER_ID} -g ${USERNAME} -d /home/${USERNAME} ${USERNAME} ; \
-  chown ${USERNAME}:${USERNAME} /home/${USERNAME}
+  chown ${USERNAME}:${USERNAME} /home/${USERNAME} ; \
+  echo "${USERNAME} ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers ; \
+  chmod 0440 /etc/sudoers
+
 WORKDIR /home/${USERNAME}
 RUN set -e ; \
     apt-get update ; \
