--- a/src/mount/CMakeLists.txt
+++ b/src/mount/CMakeLists.txt
@@ -19,11 +19,12 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 collect_sources(MOUNT)
 
 shared_add_library(mount ${MOUNT_SOURCES})
-shared_target_link_libraries(mount mfscommon lizardfs-client ${ADDITIONAL_LIBS})
+shared_target_link_libraries(mount mfscommon ${ADDITIONAL_LIBS})
 
 create_unittest(mount ${MOUNT_TESTS})
 link_unittest(mount mount mfscommon)
 
 if (ENABLE_CLIENT_LIB)
+    shared_target_link_libraries(mount mfscommon lizardfs-client ${ADDITIONAL_LIBS})
   add_subdirectory(client)
 endif()
