--- a/tests/ci_build/Dockerfile.ubuntu22.04-build
+++ b/tests/ci_build/Dockerfile.ubuntu22.04-build
@@ -9,15 +9,18 @@ COPY ./tests/ci_build/setup-build-machine.sh /tmp/ci_build/
 ARG GROUP_ID=1000
 ARG USER_ID=1000
 ARG USERNAME=jenkins
+ARG USER_HOME=/home/${USERNAME}
 ENV GROUP_ID=${GROUP_ID}
 ENV USER_ID=${USER_ID}
 ENV USERNAME=${USERNAME}
-RUN set -e ; \
-  mkdir -p /home/${USERNAME} ; \
-  groupadd -g ${GROUP_ID} ${USERNAME} ; \
-  useradd -r -u ${USER_ID} -g ${USERNAME} -d /home/${USERNAME} ${USERNAME} ; \
-  chown ${USERNAME}:${USERNAME} /home/${USERNAME}
-WORKDIR /home/${USERNAME}
+
+RUN set -e; \
+    groupadd -g ${GROUP_ID} ${USERNAME}; \
+    useradd -r -m -u ${USER_ID} -g ${GROUP_ID} -d ${USER_HOME} ${USERNAME}; \
+    mkdir -p ${USER_HOME}/.cache/ccache; \
+    chmod -R ugo+rwX ${USER_HOME}
+WORKDIR ${USER_HOME}
+
 RUN set -e ; \
     apt-get update ; \
     chmod +x /tmp/ci_build/setup-build-machine.sh ; \
