feat(master): Allow change metadata save period
By default metadata dump occurs every hour at full hours. This
commit creates a configuration that allows to change the default
interval for dumps. Also, by setting it to 0 it is possible to disable
the dump (not recommended in production). There was a secret config
variable for disabling this, that has been superseded by this commit's
new config.

Co-authored-by: Antuan <antuan@leil.io>

--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -238,6 +238,11 @@
 ## (Default: 1800)
 # METADATA_SAVE_REQUEST_MIN_PERIOD = 1800
 
+## Metadata periodical dump interval in seconds. If set to 0, metadata periodic dump
+## is disabled (not recommended).
+## (Default: 3600)
+# METADATA_DUMP_PERIOD_SECONDS = 3600
+
 # deprecated:
 # CHUNKS_DEL_LIMIT - use CHUNKS_SOFT_DEL_LIMIT instead
 
