docs: Update chunkserver related docs (#67)
The previous version was not documenting how to handle the new chunk
format in sfshdd.cfg files.

--- a/src/data/sfshdd.cfg
+++ b/src/data/sfshdd.cfg
@@ -1,8 +1,16 @@
 # sfshdd.cfg(5)
-# mount points of HDD drives
 #
-#/mnt/hd1
-#/mnt/hd2
-#etc.
-# The following mount point is marked for removal with '*':
-#*/mnt/hd3
+# Chunks are divided into metadata (.met) and data (.dat) parts.
+# Each line of this file must match the following syntax:
+# [*]metadata_dir[ | data_dir]
+#
+# Sample file for two HDD drives with metadata and data in the same location:
+#/mnt/hdd1
+#/mnt/hdd2
+#
+# The following drive is marked for removal with '*':
+#*/mnt/hdd3
+#
+# The next line can be used to store the metadata chunk parts in a different
+# drive than the data parts:
+#/mnt/nvme1 | /mnt/hhd1
