docs: Rename doc txt files to use adoc
This not only makes clear for human readers/editors what is the markup
language, but also for code editors and IDE's so that they can directly
support it without having to specify filetype.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -56,7 +56,7 @@ set(MANPAGES
 
 set(INSTALLED_MANPAGES)
 foreach(MANPAGE ${MANPAGES})
-  get_filename_component(MANPAGE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/${MANPAGE}.txt ABSOLUTE)
+  get_filename_component(MANPAGE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/${MANPAGE}.adoc ABSOLUTE)
   set(GENERATED_MANPAGE_PATH ${CMAKE_CURRENT_BINARY_DIR}/${MANPAGE})
   if(ENABLE_VERBOSE_ASCIIDOC)
     set(ASCIIDOC_VERBOSE --verbose --keep-artifacts)
