chunkserver: Make symbols visible in plugins
Some symbols needed for the defragmentation were not visible from the
plugins. This commit moves them to the chunkserver-common library.

The flag CMAKE_ENABLE_EXPORTS was added to share the same symbol
references between the chunkserver and the plugins. This is needed
because the plugins are shared libraries. If this variable is not set
or OFF, then the same global, probably static, variable will be
different on each executable (chunkserver and plugin).

The call to the defragmentation was removed from the tester thread, it
is now responsibility of the concrete plugin.

Co-authored-by: Crash <crash@leil.io>
Co-authored-by: guillex <guillex@leil.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,10 @@ cmake_minimum_required(VERSION 3.20)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Enable symbol export for loadable modules, ensuring same shared resource
+# references. Needed for the plugins, as they are shared libraries.
+set(CMAKE_ENABLE_EXPORTS ON)
+
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
