build: Add Windows client build
This commit makes possible to directly build the Windows Client from a
clone of the SaunaFS which contains the windows specific code.

--- a/config.h.in
+++ b/config.h.in
@@ -9,6 +9,10 @@
 #define SAUNAFS_PACKAGE_VERSION_MICRO @PACKAGE_VERSION_MICRO@
 #define SAUNAFS_PACKAGE_VERSION "@PACKAGE_VERSION@"
 #define SAUNAFS_VERSHEX ((@PACKAGE_VERSION_MAJOR@)*0x10000+(@PACKAGE_VERSION_MINOR@)*0x100+(@PACKAGE_VERSION_MICRO@))
+#ifdef _WIN32
+#define WINDOWS_ClIENT_VERSION "@WINCLIENT_PACKAGE_VERSION@"
+#define WINFSP_LIBRARY_VERSION "@WINFSP_VERSION@"
+#endif
 
 #define PROTO_BASE @PROTO_BASE@
 #define SFSBLOCKSINCHUNK @SAUNAFS_BLOCKS_IN_CHUNK@
