windows: Apply code review suggestions
List of changes:
- remove create-win-release.bat file from this repo to clean it from
Windows specific scripts.
- rename WINFSP_FUSE_DLL_FOR_ARCH to WINFSP_FUSE_DLL.
- add to gitignore the the windows specific soft/hardlinks.
- rename the mastercomm.cc Windows specific variables to align them to
the code style.
- revert formatting on oplog.cc file.
- add ```wait_chunkservers``` function to some tests instead of plain
```sleep 5``` for better readability.
- refactor ```test_cleanup``` and ```add_mount_``` functions: split most
of its code into specific functions for Windows and Linux testing.
- remove separation of the ```SAUNAFS_ROOT``` values for each system.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@ compile_commands.json
 src/chunkserver/plugins/zonefs_disk
 tests/ci_build/run-smr-tests.sh
 tests/test_suites/SMRTests
+
+# Windows
+##########
+src/mount/windows
+create-win-release.bat
