fix (ci): Create NFS-Ganesha config's directory
Since we installed nfs-ganesha from packages, the `/etc/ganesha/`
directory was not available for writing the configuration.

Co-authored-by: guillex <guillex@leil.io>

--- a/tests/ci_build/ganesha/Dockerfile.ubuntu-24.04
+++ b/tests/ci_build/ganesha/Dockerfile.ubuntu-24.04
@@ -51,7 +51,6 @@ COPY --chmod=0755 services/rpc-statd/healthcheck.sh /healthcheck.d/30-rpc-statd.
 
 FROM rpc-statd AS ganesha
 
-
 #COPY --from=ganesha-builder /usr/bin/ganesha.nfsd /usr/bin/ganesha.nfsd
 #COPY --from=ganesha-builder /etc/ganesha /etc/ganesha
 #COPY --from=ganesha-builder /usr/lib/ganesha /usr/lib/ganesha
@@ -59,10 +58,12 @@ FROM rpc-statd AS ganesha
 #COPY --from=ganesha-builder /tmp/dependencies/lib64 /lib64
 
 RUN set -e ; \
-    if ! type showmount > /dev/null 2>&1; then \
-        apt update; apt install -y --no-install-recommends nfs-ganesha nfs-common ; \
-        rm -rf /var/lib/apt/lists/* ; \
-    fi ;
+    apt update; \
+    apt install -y --no-install-recommends \
+        nfs-common \
+        nfs-ganesha ; \
+    rm -rf /var/lib/apt/lists/* ; \
+    true
 
 COPY --chmod=0755 services/ganesha/entrypoint.sh /docker-entrypoint.d/99-ganesha.sh
 COPY --chmod=0755 services/ganesha/healthcheck.sh /healthcheck.d/99-ganesha.sh
