build: Add cpack configuration
Starting block for building project packages using cpack.

Co-authored-by: guillex <guillex@leil.io>

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ compile_commands.json
 
 # Commonly used build directory #
 #################################
+/_packages/
 /build*
 /cmake-build-*
 /install/
