--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -118,7 +118,7 @@
 ## (Default: 60)
 # CHUNKS_LOOP_MAX_CPU = 60
 
-## Use linear assignment in chunks optimization. It is suggested to 
+## Use linear assignment in chunks optimization. It is suggested to
 ## disable it if not using labeled chunkservers (Boolean, 0 or 1).
 ## (Default: 1)
 # USE_LINEAR_ASSIGNMENT_OPTIMIZER = 1
@@ -283,3 +283,13 @@
 ## Test files loop will try to check all files in specified time (in seconds).
 ## (Default: 3600)
 # FILE_TEST_LOOP_MIN_TIME = 3600
+
+## Option to enable Prometheus support and metric collection. Set to either 1
+## to enable, or 0 to disable.
+## (Default: 0)
+# ENABLE_PROMETHEUS = 0
+
+## When ENABLE_PROMETHEUS is set, you can use this option to set the host and
+## port where it will listen for scrapers. Must in the format of HOST:PORT.
+## (Default: 0.0.0.0:9499)
+# PROMETHEUS_HOST=0.0.0.0:9499
