--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -8,7 +8,7 @@ if(NOT DB_FOUND)
 endif()
 
 add_library(master ${MASTER_SOURCES})
-target_link_libraries(master sfscommon ${ADDITIONAL_LIBS})
+target_link_libraries(master sfscommon metrics ${ADDITIONAL_LIBS})
 if(JUDY_LIBRARY)
   target_link_libraries(master ${JUDY_LIBRARY})
 endif()
@@ -19,7 +19,7 @@ create_unittest(master ${MASTER_TESTS})
 link_unittest(master master sfscommon)
 
 add_executable(sfsmaster ${MAIN_SRC})
-target_link_libraries(sfsmaster master ${PAM_LIBRARIES})
+target_link_libraries(sfsmaster master metrics ${PAM_LIBRARIES})
 if(SYSTEMD_FOUND)
   target_link_libraries(sfsmaster ${SYSTEMD_LIBRARIES})
 endif()
