[SQUASH]: Fix wrong target PIC libraries

--- a/src/common/slogger/CMakeLists.txt
+++ b/src/common/slogger/CMakeLists.txt
@@ -2,4 +2,4 @@ collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
 target_link_libraries(slogger sfserr)
-target_link_libraries(slogger sfserr_pic)
+target_link_libraries(slogger_pic sfserr_pic)
