common, master, data: Cache optimizer input/output
Several tests performed have shown high CPU use of idle master dedicated
to the execution of the functions ChunkCopiesCalculator::optimize
and linear_assignment::auctionOptimization. This behavior is
specially caused due to a couple of calls to both of them for every
chunk which don't have any pending jobs (like replication and
rebalancing) in the master ChunkWorker mainloop.

Solution for this issue is to cache the input provided and the output
got from the auctionOptimization algorithm. Current implementation uses
polynomial hashing to make O(NUMBER_OF_PARTS_IN_SLICE) indexing and
getting the answer from an already populated cache.

This commit also adds some few other changes:
- add master option to toggle the use of the linear assignment
optimization in the optimize function.
- skip regular slices in optimize to reduce the number of calls to the
optimizer.
- implement a unittest suite for the newly added cache class.

--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -118,6 +118,11 @@
 ## (Default: 60)
 # CHUNKS_LOOP_MAX_CPU = 60
 
+## Use linear assignment in chunks optimization. It is suggested to 
+## disable it if not using labeled chunkservers (Boolean, 0 or 1).
+## (Default: 1)
+# USE_LINEAR_ASSIGNMENT_OPTIMIZER = 1
+
 ## Soft maximum number of chunks to delete on one chunkserver.
 ## (Default: 10)
 # CHUNKS_SOFT_DEL_LIMIT = 10
