chore: Ignore the ICE submodule

--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,10 @@ compile_commands.json
 # submodules #
 ##############
 src/chunkserver/plugins/zonefs_disk
+src/chunkserver/plugins/ice_disk_energy_manager
 tests/ci_build/run-smr-tests.sh
 tests/test_suites/SMRTests
+tests/test_suites/ICETests
 
 # Windows #
 ###########
