[SQUASH]: Move to src/slogger and rename headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -362,7 +362,7 @@ endif()
 add_subdirectory(external)
 add_subdirectory(src/admin)
 add_subdirectory(src/errors)
-add_subdirectory(src/common/slogger)
+add_subdirectory(src/slogger)
 add_subdirectory(src/common)
 add_subdirectory(src/protocol)
 add_subdirectory(src/mount)
