--- a/src/slogger/CMakeLists.txt
+++ b/src/slogger/CMakeLists.txt
@@ -1,5 +1,4 @@
 collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
-target_link_libraries(slogger sfserr)
-target_link_libraries(slogger_pic sfserr_pic)
+shared_target_link_libraries(slogger STATIC sfserr SHARED sfserr_pic)
