feat(chunkserver): Expose gDiskManager to plugins
This change exposes the gDiskManager to the plugins by moving it to the
chunkserver-common library. The DISK_MANAGER_TYPE configuration
variable was also added to select the specific disk manager to use at
run time.

--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -133,6 +133,12 @@
 ## (Default: 1), i.e. enabled.
 #PERFORM_FSYNC = 1
 
+## [ADVANCED] The DiskManager is responsible for assigning each chunk to a
+## specific disk. By default the chunks are distributed in a balanced way among
+## all the available disks. This variable can be changed to select a custom
+## DiskManager implementation loaded from plugins.
+## (Default: DEFAULT), the default balanced distribution will be used.
+# DISK_MANAGER_TYPE = DEFAULT
 
 ## deprecated, to be removed.
 # BACK_LOGS = 50
