--- a/rpm/service-files/saunafs-uraft.service
+++ b/rpm/service-files/saunafs-uraft.service
@@ -3,6 +3,7 @@ Description=SaunaFS uraft high availability daemon
 Requires=saunafs-ha-master.service
 After=network.target
 After=saunafs-ha-master.service
+Conflicts=saunafs-uraft-elector.service
 
 [Service]
 Type=simple
