fix: Update services to wait for network
network.target is not giving warranty that IP adresses are set
network-online.target gives sush assurances
https://systemd.io/NETWORK_ONLINE/

Co-authored-by: Antuan <antuan@leil.io>
Co-authored-by: Crash <crash@leil.io>

--- a/rpm/service-files/saunafs-ha-master.service
+++ b/rpm/service-files/saunafs-ha-master.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=SaunaFS master server daemon
-After=syslog.target network.target
+After=syslog.target network-online.target network.target
 PartOf=saunafs-uraft.service
 
 [Service]
