--- a/rpm/service-files/saunafs-cgiserv.service
+++ b/rpm/service-files/saunafs-cgiserv.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=SaunaFS CGI server daemon
 Documentation=man:saunafs-cgiserver
-After=network.target
+After=network-online.target network.target
 
 [Service]
 Environment=BIND_HOST=0.0.0.0
