--- a/rpm/service-files/saunafs-chunkserver.service
+++ b/rpm/service-files/saunafs-chunkserver.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=SaunaFS chunkserver daemon
 Documentation=man:sfschunkserver
-After=network.target
+After=network-online.target network.target
 
 [Service]
 Type=forking
