chore: do interactive fixing of some ambigous typos using codespell
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w -i 3 -C 2",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

Signed-off-by: Yaroslav Halchenko <debian@onerussian.com>

--- a/src/data/saunafs-uraft.cfg
+++ b/src/data/saunafs-uraft.cfg
@@ -38,7 +38,7 @@
 ## Maximum election timeout (ms)
 # ELECTION_TIMEOUT_MAX = 600
 
-## Period between hearbeat messages (ms)
+## Period between heartbeat messages (ms)
 # HEARTBEAT_PERIOD = 20
 
 ## How often uRaft checks if local master is alive (ms)
