docs(sfsgoals.cfg): Give more practical examples
* Add more practical EC examples
* Format the file
* Set a space in between the goal name and the colon before definition.

--- a/src/data/sfsgoals.cfg
+++ b/src/data/sfsgoals.cfg
@@ -15,15 +15,49 @@
 # Custom goals can be defined with or without labels.
 #
 # EXAMPLES:
-#
-#  3 3 : _ _ _                                 # one of the default goals (three copies anywhere)
-#  8 not_important_file : _                    # only one copy
-# 11 important_file : _ _
-# 12 local_copy_on_mars : mars _               # at least one copy in the Martian datacenter
-# 13 cached_on_ssd : ssd _
-# 14 very_important_file : _ _ _ _
-# 15 min_two_locations: _ locationA locationB  # one copy in A, one in B, third anywhere
-# 16 fast_access      : ssd _ _                # one copy on ssd, two additional on any drives
-# 17 two_manufacturers: WD HT                  # one on WD disk, one on HT disk
-# 18 default_ec : $ec(5,2)                     # erasure code with 5 data parts and 2 parity parts
-# 19 wide_ec : $ec(17,9) { ssd ssd }           # erasure code 17+9 with at least two parts on ssd
+# One of the default goals (three copies anywhere)
+#  3 3 : _ _ _
+
+# Only one copy
+#  8 not_important_file : _
+
+# Two copies
+# 9 important_file : _ _
+
+# Four copies
+# 10 very_important_file : _ _ _ _
+
+# At least one copy in the chunkserver labeled 'mars', and second copy
+# anywhere (including any other chunkserver labelled mars)
+# 11 local_copy_on_mars : mars _
+
+# One copy on the chunkserver labeled 'ssd', and second on 'hdd'
+# 12 cached_on_ssd : ssd hdd
+
+# One copy in A, one in B, third anywhere
+# 13 min_two_locations : _ locationA locationB
+
+# One copy on 'ssd' chunkserver, two on any chunkserver
+# 14 fast_access : ssd _ _
+
+# One on WD labeled chunkserver, one on HT labeled chunkserver
+# 15 two_manufacturers : WD HT
+
+# EC examples:
+
+# Erasure code with 5 data parts and 2 parity parts on 7 different chunkservers
+# 16 default_ec : $ec(5,2)
+
+# Erasure code with 17 data parts and 9 parity parts with at least
+# two parts on ssd
+# 17 wide_ec : $ec(17,9) { ssd ssd }
+
+# Erasure code with 3 parts on chunkservers with label 'ssd', and the two other
+# parts on 'hdd'
+# 18 three_ssd_two_hdd : $ec(3,2) { ssd ssd ssd hdd hdd }
+
+# You can also just specify the some few parts, and leave the rest as any.
+# Erasure code with 3 parts on chunkservers with label 'ssd', and the other two
+# parts on any other chunkserver (including chunkservers labeled 'ssd' that
+# weren't chosen before.
+# 19 three_ssd_two_any : $ec(3,2) { ssd ssd ssd }
