feat(master): Add empty reserved files option
For avoiding reserved files to take system space indefinitely,
this change add a periodical empty procedure over reserved files.

--- a/src/data/sfsmaster.cfg.in
+++ b/src/data/sfsmaster.cfg.in
@@ -241,6 +241,11 @@
 ## (Default: 3600)
 # METADATA_DUMP_PERIOD_SECONDS = 3600
 
+## Interval for periodically cleaning of reserved files, in milliseconds. If set to 0, the reserved files 
+## deletion is disabled.
+## (Default: 0)
+# EMPTY_RESERVED_FILES_PERIOD_MSECONDS = 0
+
 # deprecated:
 # CHUNKS_DEL_LIMIT - use CHUNKS_SOFT_DEL_LIMIT instead
 
