build: Allow distcc usage if available
This commit permits escalate the build by
distributing the compilation to different
machines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ option(ENABLE_REQUEST_LOG       "Enable logging request times"                  
 option(USE_LEGACY_READ_MESSAGES "Enable sending old type of messages by mount"           OFF)
 option(ENABLE_NFS_GANESHA       "Enable nfs-ganesha plugin"                              OFF)
 option(ENABLE_CCACHE            "Enable ccache during compilation"                       ON)
+option(ENABLE_DISTCC            "Enable distcc during compilation"                       OFF)
 option(ENABLE_NFS_ACL_SUPPORT   "Enable nfs-ganesha ACL support"                         ON)
 option(ENABLE_COMPILE_COMMANDS  "Enable generation of compile_commands.json"             ON)
 option(ENABLE_PROMETHEUS        "Enable prometheus metrics"                              ON)
@@ -58,11 +59,26 @@ find_program(CCACHE_FOUND ccache)
 message(STATUS "ENABLE_CCACHE: ${ENABLE_CCACHE}")
 message(STATUS "CCACHE_FOUND: ${CCACHE_FOUND}")
 if(ENABLE_CCACHE AND CCACHE_FOUND)
-  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+  list(APPEND CMAKE_C_COMPILER_LAUNCHER ccache)
+  list(APPEND CMAKE_CXX_COMPILER_LAUNCHER ccache)
   message(STATUS "Using ccache")
 endif()
 
-enable_language(C)
+find_program(DISTCC_FOUND distcc)
+message(STATUS "ENABLE_DISTCC: ${ENABLE_DISTCC}")
+message(STATUS "DISTCC_FOUND: ${DISTCC_FOUND}")
+if(ENABLE_DISTCC AND DISTCC_FOUND)
+#   set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
+  list(APPEND CMAKE_C_COMPILER_LAUNCHER distcc)
+  list(APPEND CMAKE_CXX_COMPILER_LAUNCHER distcc)
+  set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+  message(STATUS "Using distcc")
+endif()
+
+message(STATUS "CMAKE_C_COMPILER_LAUNCHER: ${CMAKE_C_COMPILER_LAUNCHER}")
+message(STATUS "CMAKE_CXX_COMPILER_LAUNCHER: ${CMAKE_CXX_COMPILER_LAUNCHER}")
+
+enable_language(CXX)
 include(GNUInstallDirs)
 
 set(BIN_SUBDIR                  "${CMAKE_INSTALL_FULL_BINDIR}")
