feat(slogger): Add setting up logging using env/config variables
Previously, it wasn't possible to setup specific log levels. You had
had to start with -d (debug) mode to get debug messages. This commit
introduces adding specifc log levels using either LOG_LEVEL in config
file, or using SAUNAFS_LOG_LEVEL from the environment

It also fixes -d always setting the level to debug, which is what you
may not want if you want the process to run in the foreground.

--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -175,3 +175,15 @@
 ## [ADVANCED] Timeout for single wave in replication. After this timeout, next wave
 ## of read requests is sent to other chunkservers.
 # REPLICATION_WAVE_TIMEOUT_MS = 500
+
+## Setup logging. Uses the environment variable SAUNAFS_LOG_LEVEL or config
+## value LOG_LEVEL to determine logging level.
+## Valid log levels are
+## 'trace'
+## 'debug'
+## 'info'
+## 'warn' or 'warning'
+## 'err' or 'error'
+## 'crit' or 'critical'
+## 'off'
+# LOG_LEVEL = info
