feat(chunkserver): Improve network workers params
This change makes consistent the parameters related to network workers.
In some cases, the documentation was different from the implementation.

The following parameters were adjusted to be more general purpose:
- NR_OF_NETWORK_WORKERS: from 1 to 2, which handles better higher
  workloads.
- NR_OF_HDD_WORKERS_PER_NETWORK_WORKER: set consistently to 16.

BGJOBSCNT_PER_NETWORK_WORKER was documented.

Removed duplicated entries in sfschunkserver.cfg.

--- a/src/data/sfschunkserver.cfg.in
+++ b/src/data/sfschunkserver.cfg.in
@@ -50,13 +50,6 @@
 ## (Default: 9422)
 # CSSERV_LISTEN_PORT = 9422
 
-# NR_OF_NETWORK_WORKERS = 1
-# NR_OF_HDD_WORKERS_PER_NETWORK_WORKER = 2
-# BGJOBSCNT_PER_NETWORK_WORKER = 1000
-
-# READ_AHEAD_KB = 0
-# MAX_READ_BEHIND_KB = 0
-
 ## Name of volume configuration file.
 ## (Default: @ETC_PATH@/sfshdd.cfg)
 # HDD_CONF_FILENAME = @ETC_PATH@/sfshdd.cfg
@@ -109,13 +102,17 @@
 ## Number of threads which handle (in a round-robin manner) connections
 ## with clients; these threads are responsible for reading from
 ## sockets and coping data from internal buffers to sockets.
-## (Default: 1)
-# NR_OF_NETWORK_WORKERS = 1
+## (Default: 2)
+# NR_OF_NETWORK_WORKERS = 2
 
 ## Number of threads that each network worker may use to do disk operations
 ## like opening chunks, reading or writing them
-## (Default: 20)
-# NR_OF_HDD_WORKERS_PER_NETWORK_WORKER = 20
+## (Default: 16)
+# NR_OF_HDD_WORKERS_PER_NETWORK_WORKER = 16
+
+## Maximum number of jobs that each network worker may use for disk operations.
+## (Default: 1000)
+# BGJOBSCNT_PER_NETWORK_WORKER = 1000
 
 ## additional number of kilobytes which should be passed to
 ## posix_fadvise(POSIX_FADV_WILLNEED) before reading data from a chunk
