feat: Configure judy use via directives
This change adds a couple of possible directives for the CMake to
configure the judy library use:
- DISABLE_JUDY_FOR_SPARSEBITSET: disables the use of judy for
SparseBitset class (used in IdPoolDetainer class).
- DISABLE_JUDY_FOR_FSCONTAINERS: disables the use of judy_map for
several filesystem metadata containers.

The motivation for this change is to easily configure the use of judy
because it was used by default otherwise, and some use cases (unlink
speed) show that the replacement structure may perform better.

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -7,6 +7,22 @@ if(NOT DB_FOUND)
   list(REMOVE_ITEM MASTER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/hstring_bdbstorage.cc")
 endif()
 
+option(DISABLE_JUDY_FOR_SPARSEBITSET "Disable the use of judy for SparseBitset"                            OFF)
+option(DISABLE_JUDY_FOR_FSCONTAINERS "Disable the use of judy for several metadata containers." OFF)
+
+if(DISABLE_JUDY_FOR_SPARSEBITSET)
+  message(STATUS "Judy for SparseBitset disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_SPARSEBITSET)
+else()
+  message(STATUS "Judy for SparseBitset enabled (if available)")
+endif()
+if(DISABLE_JUDY_FOR_FSCONTAINERS)
+  message(STATUS "Judy for metadata containers disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_FSCONTAINERS)
+else()
+  message(STATUS "Judy for metadata containers enabled (if available)")
+endif()
+
 add_library(master ${MASTER_SOURCES})
 target_link_libraries(master sfscommon metrics ${ADDITIONAL_LIBS})
 if(JUDY_LIBRARY)
