chore: Change how PACKAGE_VERSION string is build
Git commits are not guaranteed to be available or reliable on build time
(for example, some packaging systems prefer without a VCS or have their
own image of the repository with their own commits). Build time may be
useful, but it should not be part of the PACKAGE_VERSION, instead it
should be generated seperately and used seperately when -v is called.
Also, the version should not depend on an outside variable, the
CMakeLists.txt file should be the final source for this.

This commit removes the above git commit and build time variables (build
time will be re-introduced in another commit) and simplifies the version
string, with one exception: A compile time option called VERSION_SUFFIX,
which can be used to identify the build (e.g, 'unofficial', 'dev', 'rc'
or nothing at all). By default this will be dev when building from
source, or 'unofficial' when using ./configure. Package maintainers may
use their own suffix to distinguish building processes or add additional
version information.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
+set(DEFAULT_MIN_VERSION "4.6.0")
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -188,16 +189,10 @@ endif()
 
 project(saunafs)
 
-if(NOT PACKAGE_VERSION)
-  set(DEFAULT_MIN_VERSION "4.6.0")
-  execute_process(COMMAND "git" "rev-parse" "--short" "HEAD"
-    OUTPUT_VARIABLE GIT_SHA1_SHORT RESULT_VARIABLE GIT_SHA1_SHORT_RETURN_VALUE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-  execute_process(COMMAND "git" "rev-parse" "--abbrev-ref" "HEAD"
-    OUTPUT_VARIABLE GIT_BRANCH_NAME RESULT_VARIABLE GIT_BRANCH_NAME_RETURN_VALUE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-  string(TIMESTAMP BUILD_TIMESTAMP "%y%m%d-%H%M%S")
-  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}-${BUILD_TIMESTAMP}-unstable-${GIT_BRANCH_NAME}-${GIT_SHA1_SHORT}")
+if(VERSION_SUFFIX)
+  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}${VERSION_SUFFIX}")
+else()
+  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}-dev")
 endif()
 
 string(REGEX MATCH "^([0-9]+)\\.([0-9]+)\\.([0-9]+)" PACKAGE_VERSION_MATCH ${PACKAGE_VERSION})
