feat: Improve Judy related compiler directives
Changes:
- remove the DISABLE_JUDY_FOR_SPARSEBITSET directive: it is extremely
harmful in some cases to put it ON. The load time of free inodes could
increase dramatically.
- split the DISABLE_JUDY_FOR_FSCONTAINERS directive into specific ones
for each container. This change targets higher customability.
- set DISABLE_JUDY_FOR_ENTRIESCONTAINER to ON by default. Performance
tests show high impact of this option in the unlink speed, and no
downsides for now, thus it would be nice to leave it ON by default.

--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -7,20 +7,35 @@ if(NOT DB_FOUND)
   list(REMOVE_ITEM MASTER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/hstring_bdbstorage.cc")
 endif()
 
-option(DISABLE_JUDY_FOR_SPARSEBITSET "Disable the use of judy for SparseBitset"                            OFF)
-option(DISABLE_JUDY_FOR_FSCONTAINERS "Disable the use of judy for several metadata containers." OFF)
+option(DISABLE_JUDY_FOR_DEFECTIVENODESMAP       "Disable the use of judy for the defective inodes map."                OFF)
+option(DISABLE_JUDY_FOR_TRASHPATHCONTAINER      "Disable the use of judy for the trash path container."                OFF)
+option(DISABLE_JUDY_FOR_RESERVEDPATHCONTAINER   "Disable the use of judy for the reserved path container."             OFF)
+# Huge impact in unlink speed
+option(DISABLE_JUDY_FOR_ENTRIESCONTAINER        "Disable the use of judy for the FSNodeDirectory::EntriesContainer."   ON)
 
-if(DISABLE_JUDY_FOR_SPARSEBITSET)
-  message(STATUS "Judy for SparseBitset disabled")
-  add_definitions(-DDISABLE_JUDY_FOR_SPARSEBITSET)
+if(DISABLE_JUDY_FOR_DEFECTIVENODESMAP)
+  message(STATUS "Judy for defective inodes map disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_DEFECTIVENODESMAP)
 else()
-  message(STATUS "Judy for SparseBitset enabled (if available)")
+  message(STATUS "Judy for defective inodes map enabled (if available)")
 endif()
-if(DISABLE_JUDY_FOR_FSCONTAINERS)
-  message(STATUS "Judy for metadata containers disabled")
-  add_definitions(-DDISABLE_JUDY_FOR_FSCONTAINERS)
+if(DISABLE_JUDY_FOR_TRASHPATHCONTAINER)
+  message(STATUS "Judy for trash path container disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_TRASHPATHCONTAINER)
 else()
-  message(STATUS "Judy for metadata containers enabled (if available)")
+  message(STATUS "Judy for trash path container enabled (if available)")
+endif()
+if(DISABLE_JUDY_FOR_RESERVEDPATHCONTAINER)
+  message(STATUS "Judy for reserved path container disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_RESERVEDPATHCONTAINER)
+else()
+  message(STATUS "Judy for reserved path container enabled (if available)")
+endif()
+if(DISABLE_JUDY_FOR_ENTRIESCONTAINER)
+  message(STATUS "Judy for FSNodeDirectory::EntriesContainer map disabled")
+  add_definitions(-DDISABLE_JUDY_FOR_ENTRIESCONTAINER)
+else()
+  message(STATUS "Judy for FSNodeDirectory::EntriesContainer enabled (if available)")
 endif()
 
 add_library(master ${MASTER_SOURCES})
